--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,14 +4,19 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "postinstall": "ng build --aot -prod"
   },
   "private": true,
   "dependencies": {
+    "@angular/cli": "~1.7.4",
+    "@angular/compiler-cli": "^5.2.0",
+    "typescript": "~2.5.3",
+    "express": "~4.16.0",
     "@angular/animations": "^5.2.0",
     "@angular/cdk": "^5.2.5",
     "@angular/common": "^5.2.0",
@@ -48,5 +53,9 @@
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
     "typescript": "~2.5.3"
+  },
+  "engines": {
+    "node": "8.11.1",
+    "npm": "5.8.0"
   }
 }
